# autonomon

./: .env.device.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
autonomon/: Makefile  pyproject.toml
autonomon/src/autonomon/: __init__.py  fan_in.py  messages.py  pipeline.py  plugin_auth.py  slot.py
autonomon/src/autonomon/action/: __init__.py  base.py
autonomon/src/autonomon/perception/: __init__.py  base.py
autonomon/src/autonomon/planning/: __init__.py  base.py
autonomon/src/autonomon/routines/: __init__.py  cli.py  explore.py  registry.py
autonomon/src/autonomon/world_model/: __init__.py  base.py
autonomon/tests/: test_cli.py  test_fan_in.py  test_messages.py  test_perception.py  test_pipeline.py  test_pipeline_integration.py  test_plugin_auth.py  test_slot.py  test_world_model.py
docs/: architecture.md  roadmap.md
docs/adr/: 001-layered-architecture.md  002-rest-api-client-pattern.md  003-routine-registry.md  004-autonomon-is-the-brain.md  005-file-based-catalog-handoff.md  006-lean-core-no-hot-swap-typed-queues.md  007-occupancy-grid-rule-planner-with-consumer.md
scripts/: deploy.sh  fetch_mobilenet_ssd.sh  fetch_model.sh
src/autonomon/: __init__.py  fan_in.py  messages.py  pipeline.py  slot.py
src/autonomon/action/: base.py  vehicle.py
src/autonomon/perception/: __init__.py  base.py  detector.py  perceptron.py  vision.py
src/autonomon/planning/: __init__.py  avoidance.py  base.py  follow.py  pursuit.py  rule.py
src/autonomon/planning/rules/: explore.toml  patrol.toml
src/autonomon/routines/: __init__.py  cli.py  explore.py  follow_user.py  patrol.py  publish.py  registry.py  reporting.py
src/autonomon/world_model/: __init__.py  base.py  obstacle.py  occupancy.py  target.py
tests/: test_action.py  test_cli.py  test_detector.py  test_fan_in.py  test_follow_planner.py  test_integration_subprocess.py  test_messages.py  test_occupancy_world_model.py  test_perception.py  test_pipeline.py  test_pipeline_integration.py  test_planning.py  test_publish.py  test_pursuit.py  test_reporting.py  test_routines.py  test_rule_planner.py  test_slot.py  test_target_world_model.py  test_vision.py  test_world_model.py
