[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomon"
version = "0.3.0"
description = "Four-layer autonomous capabilities framework for the nomon fleet."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Perceptua", email = "perceptua.blue@gmail.com"}
]
keywords = ["raspberry-pi", "iot", "robotics", "nomon", "autonomy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "httpx>=0.25",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
# Vision stack for the `follow-user` routine (person detection). Kept optional and
# lazy-imported so the core install and non-vision tests stay light. `ultralytics`
# (AGPL) is NOT a runtime dep — it is used only offline to export the YOLOv8n ONNX
# model that this stack runs via onnxruntime.
vision = [
    "onnxruntime>=1.17",
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.scripts]
nomon-autonomon = "autonomon.routines.cli:main"

[project.urls]
Repository = "https://github.com/Perceptua/autonomon"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C4", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["autonomon"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
